src/app/widgets/Visualizer/index.styl
@import "widget";
@import "primary-toolbar";

.visualizer-component {
    // padding: 15px;
    // margin: 15px;
    // border: 2px solid #333;
    margin: 10px;
}

.visualizer-header {
    // padding: 12px 0 0 12px;
}

.visualizer-wrapper {
    display: flex;
    flex-direction column;
    flex-grow: 1;
    position: relative;
}
.visualizer-container{
    display: flex;
    flex-direction column;
    flex-grow: 1;
}

